# ystal

./: .gitignore  LICENSE  README.md  d.txt  license  manage.py  pyproject.toml
KataLEna/: asgi.py  settings.py  urls.py  wsgi.py
OnlineStore/: settings.py
staticfiles/assets/js/: ajax.js
store/: apps.py
store/migrations/: 0002_alter_taggeditem_content_type.py
templates/: base.html
templates/about/: author.html  project.html
templates/includes/: footer.html  header.html
templates/store/: main_page.html
templates/users/: logged_out.html  profile.html
users/: views.py
