[project]
name = "storeproject-main"
version = "0.1.0"
description = ""
authors = [
    {name = "katalinka09",email = "katalinka09@edu.vvsu.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.5,<6.0.0)",
    "pillow (>=11.1.0,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
